UI: BugFix - Fix bottom OCI icon layout issue on mobile devices.

--- a/main/src/main/js/launch/src/style.css
+++ b/main/src/main/js/launch/src/style.css
@@ -4,9 +4,9 @@ html {
 }
 
 body {
+  display: flex;
   position: relative;
-  padding-bottom: 6rem;
-  height: 100%;
+  min-height: 100%;
   --theme-dark: #2d2d2d;
   --theme-light: #f3f3f3;
   --theme-danger: rgb(148, 16, 0);
@@ -14,7 +14,7 @@ body {
 }
 
 #root {
-  height: 100vh;
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
